[package]
name = "efbuilder"
version = "0.0.3"
authors = ["Andrew Sonin <sonin.cel@yandex.ru>"]
description = "A procedural macro for generating efficient builders."
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["proc_macro", "procmacro", "builder", "derive", "derive_macro"]
repository = "https://github.com/andrewsonin/efbuilder"
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro-error = "1"
proc-macro2 = "1"
syn = "1"
